@@ -530,7 +530,7 @@ pitivi_effectswindow_get_type (void)
 	0,			/* n_preallocs */
 	pitivi_effectswindow_instance_init	/* instance_init */
       };
-      type = g_type_register_static (GTK_TYPE_WINDOW,
+      type = g_type_register_static (PITIVI_WINDOWS_TYPE,
 				     "PitiviEffectsWindowType", &info, 0);
     }
   return type;
