@@ -26,12 +26,15 @@
 #ifndef PITIVI_EFFECTSWINDOW_H
 #define PITIVI_EFFECTSWINDOW_H
 
+typedef struct _PitiviEffectsWindow PitiviEffectsWindow;
+
 /*
  * Potentially, include other headers on which this header depends.
  */
 
 #include <gtk/gtk.h>
 #include <gst/gst.h>
+#include "pitivi-windows.h"
 #include "pitivi-stockicons.h"
 
 /*
@@ -45,7 +48,6 @@
 #define PITIVI_IS_EFFECTSWINDOW_CLASS(klass) (G_TYPE_CHECK_CLASS_TYPE ((klass), PITIVI_EFFECTSWINDOW_TYPE))
 #define PITIVI_EFFECTSWINDOW_GET_CLASS(obj) (G_TYPE_INSTANCE_GET_CLASS ((obj), PITIVI_EFFECTSWINDOW_TYPE, PitiviEffectsWindowClass))
 
-typedef struct _PitiviEffectsWindow PitiviEffectsWindow;
 typedef struct _PitiviEffectsWindowClass PitiviEffectsWindowClass;
 typedef struct _PitiviEffectsWindowPrivate PitiviEffectsWindowPrivate;
 typedef struct _PitiviEffectsTree PitiviEffectsTree;
@@ -81,7 +83,7 @@ struct _PitiviEffectsTree
 
 struct _PitiviEffectsWindow
 {
-  GtkWindow parent;
+  PitiviWindows parent;
 
   /* instance public members */
 
@@ -91,7 +93,7 @@ struct _PitiviEffectsWindow
 
 struct _PitiviEffectsWindowClass
 {
-  GtkWindowClass parent;
+  PitiviWindowsClass parent;
   /* class members */
 };
 
