@@ -47,6 +47,10 @@
 #include "pitivi-mainapp.h"
 #include "pitivi-toolboxwindow.h"
 #include "pitivi-newprojectwindow.h"
+#include "pitivi-sourcelistwindow.h"
+#include "pitivi-timelinewindow.h"
+#include "pitivi-viewerwindow.h"
+#include "pitivi-effectswindow.h"
 #include "pitivi-projectsettings.h"
 #include "pitivi-settings.h"
 
@@ -59,6 +63,11 @@ struct _PitiviMainAppPrivate
   PitiviToolboxWindow		*tbxwin;
   PitiviNewProjectWindow	*win_new_project;
   PitiviSettings		*global_settings;
+
+  PitiviSourceListWindow	*srclistwin;
+  PitiviTimelineWindow		*timelinewin;
+  PitiviViewerWindow		*viewerwin;
+  PitiviEffectsWindow		*effectswin;  
 };
 
 
@@ -174,28 +183,28 @@ void
 pitivi_mainapp_callb_sourcelist (GtkWindow *win, gpointer data)
 {
   PitiviMainApp *self = data;
-  self->srclistwin = NULL;
+  self->private->srclistwin = NULL;
 }
 
 void
 pitivi_mainapp_callb_effects (GtkWindow *win, gpointer data)
 {
   PitiviMainApp *self = data;
-  self->effectswin = NULL;
+  self->private->effectswin = NULL;
 }
 
 void
 pitivi_mainapp_callb_viewer (GtkWindow *win, gpointer data)
 {
   PitiviMainApp *self = data;
-  self->viewerwin = NULL;
+  self->private->viewerwin = NULL;
 }
 
 void
 pitivi_mainapp_callb_timelinewin (GtkWindow *win, gpointer data)
 {
   PitiviMainApp *self = data;
-  self->timelinewin = NULL;
+  self->private->timelinewin = NULL;
 }
 
 void
@@ -204,42 +213,42 @@ pitivi_mainapp_create_wintools (PitiviMainApp *self)
   
   /* Source List Window */
   
-  if (!GTK_IS_WIDGET (self->timelinewin))
+  if (!GTK_IS_WIDGET (self->private->timelinewin))
     {
-      self->timelinewin = pitivi_timelinewindow_new();
-      gtk_widget_show_all (GTK_WIDGET (self->timelinewin) );
-      gtk_window_move (GTK_WINDOW (self->timelinewin), 110, 450);
-      gtk_signal_connect (GTK_OBJECT (self->timelinewin), "destroy"\
+      self->private->timelinewin = pitivi_timelinewindow_new();
+      gtk_widget_show_all (GTK_WIDGET (self->private->timelinewin) );
+      gtk_window_move (GTK_WINDOW (self->private->timelinewin), 110, 450);
+      gtk_signal_connect (GTK_OBJECT (self->private->timelinewin), "destroy"\
 			  , GTK_SIGNAL_FUNC (pitivi_mainapp_callb_timelinewin), self);
     }
 
   /* Source List Window */
   
-  if (self->srclistwin == NULL)
+  if (self->private->srclistwin == NULL)
     {
-      self->srclistwin = pitivi_sourcelistwindow_new(self);
-      gtk_widget_show_all (GTK_WIDGET (self->srclistwin) );
-      gtk_window_move (GTK_WINDOW (self->srclistwin), 110, 100);
-      gtk_signal_connect (GTK_OBJECT (self->srclistwin), "destroy"\
+      self->private->srclistwin = pitivi_sourcelistwindow_new(self);
+      gtk_widget_show_all (GTK_WIDGET (self->private->srclistwin) );
+      gtk_window_move (GTK_WINDOW (self->private->srclistwin), 110, 100);
+      gtk_signal_connect (GTK_OBJECT (self->private->srclistwin), "destroy"\
 			  , GTK_SIGNAL_FUNC (pitivi_mainapp_callb_sourcelist), self);
     }
   
   /* Effects Window */
   
-  if (self->effectswin == NULL)
+  if (self->private->effectswin == NULL)
     {
-      self->effectswin = pitivi_effectswindow_new();
-      gtk_widget_show_all (GTK_WIDGET (self->effectswin) );
-      gtk_window_move (GTK_WINDOW (self->effectswin), 720, 450);
-      gtk_signal_connect (GTK_OBJECT (self->effectswin), "destroy"\
+      self->private->effectswin = pitivi_effectswindow_new();
+      gtk_widget_show_all (GTK_WIDGET (self->private->effectswin) );
+      gtk_window_move (GTK_WINDOW (self->private->effectswin), 720, 450);
+      gtk_signal_connect (GTK_OBJECT (self->private->effectswin), "destroy"\
 			  , GTK_SIGNAL_FUNC (pitivi_mainapp_callb_effects), self);
     }
   
-  if (self->viewerwin == NULL)
+  if (self->private->viewerwin == NULL)
     {
-      self->viewerwin = pitivi_viewerwindow_new();
-      gtk_window_move (GTK_WINDOW (self->viewerwin), 720, 100);
-      gtk_signal_connect (GTK_OBJECT (self->viewerwin), "destroy"\
+      self->private->viewerwin = pitivi_viewerwindow_new();
+      gtk_window_move (GTK_WINDOW (self->private->viewerwin), 720, 100);
+      gtk_signal_connect (GTK_OBJECT (self->private->viewerwin), "destroy"\
 			  , GTK_SIGNAL_FUNC (pitivi_mainapp_callb_viewer), self);
     }
   gtk_window_move (GTK_WINDOW (self->private->tbxwin), 20, 450);
